--- a/instructor.html
+++ b/instructor.html
@@ -2,7 +2,7 @@
 <html>
 <head>
   <title>Aly Stroud - Instructor</title>
-  <link type="text/css" rel="stylesheet" href="css/bootstrap.css"/>
+  <link type="text/css" rel="stylesheet" href="css/bootstrap.min.css"/>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
   <link rel="stylesheet" type="text/css" href="css/style.css" />
   <link href="https://fonts.googleapis.com/css?family=Abel" rel="stylesheet">
