Add meta theme color

--- a/developer.html
+++ b/developer.html
@@ -7,6 +7,7 @@
   <link rel="stylesheet" type="text/css" href="css/style.css" />
   <link href="https://fonts.googleapis.com/css?family=Abel" rel="stylesheet">
   <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta name="theme-color" content="#800000" />
 </head>
 <body>
 <div class="container-fluid">
@@ -21,7 +22,8 @@
       <h2 class="text-center">{Developer}</h2>
     </div>
     <div class="row block-text text-center">
-      <p>My coding journey started with my first social networking site, Bebo, way back when I was 12.</p>
+      <p>My coding journey started with my first social networking site, Bebo, way back
+        <a href="https://www.codehippo.co.uk/how-i-got-into-tech/">when I was 12</a>.</p>
       <p>I taught myself HTML and CSS as I wanted to customise the theme of my page </p>
     </div>
     <div class="row greyRow block-text text-center">
@@ -29,7 +31,7 @@
         <a href="https://www.sea.co.uk">SEA</a>, working on projects within the Transport industry.
       </p>
       <p>
-        Although my job title is technically 'Java Developer', I consistently work across the stack
+        Although my job title is technically 'Java Developer', I regularly work across the stack
         A lot of my work is proprietary.
       </p>
     </div>
