Small tweaks to developer page, starting to add projects

--- a/developer.html
+++ b/developer.html
@@ -26,18 +26,42 @@
         <a href="https://www.codehippo.co.uk/how-i-got-into-tech/">when I was 12</a>.</p>
       <p>I taught myself HTML and CSS as I wanted to customise the theme of my page </p>
     </div>
-    <div class="row greyRow block-text text-center">
-      <p>I've been working as a software engineer for just over 2 years at
+    <div class="row greyRow">
+      <h3 class="text-center">Projects</h3>
+      <div>
+        <p class="text-center">
+          <a href="https://alystroud.github.io/tormund-giantspaw/">
+            Tormund Giantspaw
+          </a> - React.js app all about my cat.
+          <br />
+          <a href="#">Link to Github</a>
+        </p>
+      </div>
+      <div>
+        <p class="text-center">
+          Image
+          <a href="https://checkd-news.herokuapp.com">
+            Checkd
+          </a> - Code First: Girls Hack from Home project.
+          We wanted to create an application that helped people understand whether
+          the news they are reading is fake or not. We provide the user with an
+          indication of likely sentiment and bias of a news article followed
+          up by moderator review for authenticity and reliability.
+          The app is an Node Express app with a React front-end, with firebase authentication.
+          <a href="https://github.com/meganjohn/Checkd">Github code</a>
+        </p>
+      </div>
+    </div>
+    <div class="row block-text text-center">
+      <h3 class="text-center">Work?</h3>
+      <p>At my '9-5', I work as a software engineer at
         <a href="https://www.sea.co.uk">SEA</a>, working on projects within the Transport industry.
       </p>
       <p>
         Although my job title is technically 'Java Developer', I regularly work across the stack
+        - maintaining code, 3rd line support, testing, design.
         A lot of my work is proprietary.
       </p>
-    </div>
-    <div class="row">
-      <h3 class="text-center">Projects</h3>
-      <p class="text-center">Tormund Giantspaw - React.js app all about my cat.</p>
     </div>
     <div class="row greyRow">
       <h3 class="text-center">Skills</h3>
