--- a/developer.html
+++ b/developer.html
@@ -23,32 +23,35 @@
     </div>
     <div class="row block-text text-center">
       <p>My coding journey started with my first social networking site, Bebo, way back
-        <a href="https://www.codehippo.co.uk/how-i-got-into-tech/">when I was 12</a>.</p>
-      <p>I taught myself HTML and CSS as I wanted to customise the theme of my page </p>
+        <a href="https://www.codehippo.co.uk/how-i-got-into-tech/">when I was 12</a>.
+      (Does anyone else remember Bebo?!).</p>
+      <p>I taught myself HTML and CSS as I wanted to customise the theme of my page and make it look exactly how I wanted to.</p>
     </div>
-    <div class="row greyRow">
+    <div class="row block-text greyRow">
       <h3 class="text-center">Projects</h3>
       <div>
         <p class="text-center">
-          <a href="https://alystroud.github.io/tormund-giantspaw/">
-            Tormund Giantspaw
-          </a> - React.js app all about my cat.
+          <p>[Screenshot]</p>
+          <a href="https://checkd-news.herokuapp.com">
+            Checkd
+          </a><br /> Code First: Girls Hack from Home project.<br />
+            We wanted to create an application that helped people understand whether
+            the news they are reading is fake or not. <br />We provide the user with an
+            indication of likely sentiment and bias of a news article followed
+            up by moderator review for authenticity and reliability.<br />
+            The app is an Node Express app with a React front-end, with firebase authentication.
           <br />
-          <a href="#">Link to Github</a>
+          <a href="https://github.com/meganjohn/Checkd">Github code</a>
         </p>
       </div>
       <div>
         <p class="text-center">
-          Image
-          <a href="https://checkd-news.herokuapp.com">
-            Checkd
-          </a> - Code First: Girls Hack from Home project.
-          We wanted to create an application that helped people understand whether
-          the news they are reading is fake or not. We provide the user with an
-          indication of likely sentiment and bias of a news article followed
-          up by moderator review for authenticity and reliability.
-          The app is an Node Express app with a React front-end, with firebase authentication.
-          <a href="https://github.com/meganjohn/Checkd">Github code</a>
+          <p>[Screenshot]</p>
+          <a href="https://alystroud.github.io/tormund-giantspaw/">
+            Tormund Giantspaw
+          </a> - React.js app all about my cat.
+          <br />
+          <a href="https://github.com/alystroud/tormund-giantspaw">Link to Github</a>
         </p>
       </div>
     </div>
