Minor changes and add gitignore file

--- a/developer.html
+++ b/developer.html
@@ -13,7 +13,7 @@
 <div class="container-fluid">
   <div id="navbar">
     <a href="./index.html">Aly</a>
-    <a  class="active" href="./developer.html">Developer</a>
+    <a class="active" href="./developer.html">Developer</a>
     <a href="./creator.html">Creator</a>
     <a href="./instructor.html">Instructor</a>
   </div>
@@ -47,23 +47,26 @@
       <div>
         <p class="text-center">
           <p>[Screenshot]</p>
-          <a href="https://alystroud.github.io/tormund-giantspaw/">
+          <a href="https://tormund-giantspaw.herokuapp.com/">
             Tormund Giantspaw
-          </a> - React.js app all about my cat.
+          </a><br />
+          My cat is my absolute world, so it was only right that I made him his own website.
+          <br />This is a React app.
           <br />
           <a href="https://github.com/alystroud/tormund-giantspaw">Link to Github</a>
         </p>
       </div>
     </div>
     <div class="row block-text text-center">
-      <h3 class="text-center">Work?</h3>
+      <h3 class="text-center">Experience</h3>
       <p>At my '9-5', I work as a software engineer at
         <a href="https://www.sea.co.uk">SEA</a>, working on projects within the Transport industry.
       </p>
       <p>
-        Although my job title is technically 'Java Developer', I regularly work across the stack
-        - maintaining code, 3rd line support, testing, design.
-        A lot of my work is proprietary.
+        Although my job title is technically 'Java Developer', I regularly work across the stack.<br />
+        From requirements capture and design, through to implementation, and testing,
+        I have worked throughout the software lifecycle. I regularly work maintaining legacy code and
+        From starting as a graduate, I've taken on more responsibility...
       </p>
     </div>
     <div class="row greyRow">
