--- a/instructor.html
+++ b/instructor.html
@@ -29,6 +29,7 @@
         <a href="">Code First:Girls</a>. I'm very proud that I have taught over
         100 young women to code their very first websites over 8 weeks.
     </div>
+    <div>Links to Code First Girls blog posts</div>
   </div>
 </body>
 </html>
