--- a/developer.html
+++ b/developer.html
@@ -5,6 +5,7 @@
   <link type="text/css" rel="stylesheet" href="css/bootstrap.min.css"/>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
   <link rel="stylesheet" type="text/css" href="css/style.css" />
+  <link rel="stylesheet" type="text/css" href="css/developer.css"/>
   <link href="https://fonts.googleapis.com/css?family=Abel" rel="stylesheet">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta name="theme-color" content="#800000" />
@@ -73,19 +74,39 @@
       <h3 class="text-center">Skills</h3>
       <p>
         <ul class="skills-list">
-          <li>Java</li>
-          <li>Hibernate</li>
-          <li>Spring</li>
-          <li>SQL</li>
-          <li>HTML</li>
-          <li>CSS</li>
-          <li>React</li>
-          <li>JavaScript</li>
-          <li>TypeScript</li>
-          <li>GraphQL</li>
-          <li>git</li>
+          <li><span class="skill">Java</span></li>
+          <li><span class="skill">Hibernate</span></li>
+          <li><span class="skill">Spring</span></li>
+          <li><span class="skill">SQL</span></li>
+          <li><span class="skill">HTML</span></li>
+          <li><span class="skill">CSS</span></li><br />
+          <li><span class="skill">React</span></li>
+          <li><span class="skill">JavaScript</span></li>
+          <li><span class="skill">TypeScript</span></li>
+          <li><span class="skill">GraphQL</span></li>
+          <li><span class="skill">git</span></li>
         </ul>
       </p>
+    </div>
+    <div class="card-body">
+      <div class="card-container">
+        <div class="card" onclick="flip(event)">
+          <div class="front">
+            <img src="images/Checkd.jpg"
+                 alt="Screenshot of Checkd News"
+                 class="project-screenshot"/>
+          </div>
+          <div class="back">
+            <p>Code First: Girls Hack from Home project.<br />
+              We wanted to create an application that helped people understand whether
+              the news they are reading is fake or not. <br />We provide the user with an
+              indication of likely sentiment and bias of a news article followed
+              up by moderator review for authenticity and reliability.<br />
+              The app is an Node Express app with a React front-end, with firebase authentication.
+            </p>
+          </div>
+        </div>
+      </div>
     </div>
     <div class="row greyRow footer" padding-bottom="50px">
         <div class="col-lg-12 col-md-12">
@@ -100,5 +121,6 @@
     </div>
   </div>
   <script type="text/javascript" src="js/nav.js"></script>
+  <script type="text/javascript" src="js/developer.js"></script>
 </body>
 </html>
