Improvements to project card, add correct Tormund image

--- a/developer.html
+++ b/developer.html
@@ -30,32 +30,65 @@
     </div>
     <div class="row block-text greyRow">
       <h3 class="text-center">Projects</h3>
-      <div>
-        <p class="text-center">
-          <p>[Screenshot]</p>
-          <a href="https://checkd-news.herokuapp.com">
-            Checkd
-          </a><br /> Code First: Girls Hack from Home project.<br />
-            We wanted to create an application that helped people understand whether
-            the news they are reading is fake or not. <br />We provide the user with an
-            indication of likely sentiment and bias of a news article followed
-            up by moderator review for authenticity and reliability.<br />
-            The app is an Node Express app with a React front-end, with firebase authentication.
-          <br />
-          <a href="https://github.com/meganjohn/Checkd">Github code</a>
-        </p>
+    </div>
+    <div class="row greyRow">
+      <div class="col-lg-4 col-md-6 col-sm-6 col-xs-12 card-body">
+        <div class="card-container">
+          <div class="card" onclick="flip(event)">
+            <div class="front">
+              <img src="images/Checkd.jpg"
+                   alt="Screenshot of Checkd News"
+                   class="project-screenshot"/>
+            </div>
+            <div class="back">
+              <a href="https://checkd-news.herokuapp.com">Checkd</a>
+              <p>Code First: Girls Hack from Home project.<br />
+                  We wanted to create an application that helped people understand whether
+                  the news they are reading is fake or not. <br />We provide the user with an
+                  indication of likely sentiment and bias of a news article followed
+                  up by moderator review for authenticity and reliability.<br />
+              </p>
+              <p>Tech and tools:
+                <ul>
+                  <li>React</li>
+                  <li>Node / Express</li>
+                  <li>Python</li>
+                  <li>Firebase</li>
+                  <li>IBM Carbon</li>
+                </ul>
+              </p>
+              <a href="https://github.com/meganjohn/Checkd" class="github">
+                <img src="images/github.svg" title="Github"/>
+              </a>
+            </div>
+          </div>
+        </div>
       </div>
-      <div>
-        <p class="text-center">
-          <p>[Screenshot]</p>
-          <a href="https://tormund-giantspaw.herokuapp.com/">
-            Tormund Giantspaw
-          </a><br />
-          My cat is my absolute world, so it was only right that I made him his own website.
-          <br />This is a React app.
-          <br />
-          <a href="https://github.com/alystroud/tormund-giantspaw">Link to Github</a>
-        </p>
+      <div class="col-lg-6 col-md-6 col-sm-6 col-xs-12 card-body">
+        <div class="card-container">
+          <div class="card" onclick="flip(event)">
+            <div class="front">
+              <img src="images/tormundgiantspaw.jpg"
+                   alt="Screenshot of Tormund Giantspaw"
+                  class="project-screenshot"/>
+            </div>
+            <div class="back">
+              <a href="https://www.tormundgiantspaw.com">Tormund Giantspaw</a>
+              <p>My cat is my absolute world, so it was only right that I made him his own website.
+              </p>
+              <p>Tech and tools:
+                <ul>
+                  <li>React</li>
+                  <li>HTML</li>
+                  <li>CSS</li>
+                </ul>
+              </p>
+              <a href="https://github.com/alystroud/tormund-giantspaw" class="github">
+                <img src="images/github.svg" title="Github"/>
+              </a>
+            </div>
+          </div>
+        </div>
       </div>
     </div>
     <div class="row block-text text-center">
@@ -87,26 +120,6 @@
           <li><span class="skill">git</span></li>
         </ul>
       </p>
-    </div>
-    <div class="card-body">
-      <div class="card-container">
-        <div class="card" onclick="flip(event)">
-          <div class="front">
-            <img src="images/Checkd.jpg"
-                 alt="Screenshot of Checkd News"
-                 class="project-screenshot"/>
-          </div>
-          <div class="back">
-            <p>Code First: Girls Hack from Home project.<br />
-              We wanted to create an application that helped people understand whether
-              the news they are reading is fake or not. <br />We provide the user with an
-              indication of likely sentiment and bias of a news article followed
-              up by moderator review for authenticity and reliability.<br />
-              The app is an Node Express app with a React front-end, with firebase authentication.
-            </p>
-          </div>
-        </div>
-      </div>
     </div>
     <div class="row greyRow footer" padding-bottom="50px">
         <div class="col-lg-12 col-md-12">
