Add style to project card

--- a/developer.html
+++ b/developer.html
@@ -41,7 +41,10 @@
                    class="project-screenshot"/>
             </div>
             <div class="back">
-              <a href="https://checkd-news.herokuapp.com">Checkd</a>
+              <a href="https://checkd-news.herokuapp.com"
+                 class="project-name">
+                <h3>Checkd</h3>
+              </a>
               <p>Code First: Girls Hack from Home project.<br />
                   We wanted to create an application that helped people understand whether
                   the news they are reading is fake or not. <br />We provide the user with an
@@ -57,9 +60,11 @@
                   <li>IBM Carbon</li>
                 </ul>
               </p>
-              <a href="https://github.com/meganjohn/Checkd" class="github">
-                <img src="images/github.svg" title="Github"/>
-              </a>
+              <div class="link-section">
+                <a href="https://github.com/meganjohn/Checkd" class="github">
+                  <img src="images/github.svg" title="Github"/>
+                </a>
+              </div>
             </div>
           </div>
         </div>
@@ -73,7 +78,10 @@
                   class="project-screenshot"/>
             </div>
             <div class="back">
-              <a href="https://www.tormundgiantspaw.com">Tormund Giantspaw</a>
+              <a href="https://www.tormundgiantspaw.com"
+                 class="project-name">
+                <h3>Tormund Giantspaw</h3>
+              </a>
               <p>My cat is my absolute world, so it was only right that I made him his own website.
               </p>
               <p>Tech and tools:
@@ -83,9 +91,11 @@
                   <li>CSS</li>
                 </ul>
               </p>
-              <a href="https://github.com/alystroud/tormund-giantspaw" class="github">
-                <img src="images/github.svg" title="Github"/>
-              </a>
+              <div class="link-section">
+                <a href="https://github.com/alystroud/tormund-giantspaw" class="github">
+                  <img src="images/github.svg" title="Github"/>
+                </a>
+              </div>
             </div>
           </div>
         </div>
