--- a/developer.html
+++ b/developer.html
@@ -32,7 +32,7 @@
       <h3 class="text-center">Projects</h3>
     </div>
     <div class="row greyRow">
-      <div class="col-lg-4 col-md-6 col-sm-6 col-xs-12 card-body">
+      <div class="col-xl-4 col-lg-4 col-md-6 col-sm-6 col-xs-12 card-body">
         <div class="card-container">
           <div class="card" onclick="flip(event)">
             <div class="front">
@@ -69,7 +69,7 @@
           </div>
         </div>
       </div>
-      <div class="col-lg-6 col-md-6 col-sm-6 col-xs-12 card-body">
+      <div class="col-xl-4 col-lg-4 col-md-6 col-sm-6 col-xs-12 card-body">
         <div class="card-container">
           <div class="card" onclick="flip(event)">
             <div class="front">
@@ -78,7 +78,7 @@
                   class="project-screenshot"/>
             </div>
             <div class="back">
-              <a href="https://www.tormundgiantspaw.com"
+              <a href="http://www.tormundgiantspaw.com"
                  class="project-name">
                 <h3>Tormund Giantspaw</h3>
               </a>
