Add footer images. Update wording on developer

--- a/developer.html
+++ b/developer.html
@@ -25,8 +25,14 @@
     <div class="row block-text text-center">
       <p>My coding journey started with my first social networking site, Bebo, way back
         <a href="https://www.codehippo.co.uk/how-i-got-into-tech/">when I was 12</a>.
+        <br/>
       (Does anyone else remember Bebo?!).</p>
-      <p>I taught myself HTML and CSS as I wanted to customise the theme of my page and make it look exactly how I wanted to.</p>
+      <p>I taught myself HTML and CSS as I wanted to customise the theme of my
+        page and make it look exactly how I wanted to.
+      </p>
+      <p>From there, I started making my own websites, even making one for my dad's business.
+        After taking a short detour in engineering, I continued my love of programming professionally.
+      </p>
     </div>
     <div class="row block-text greyRow">
       <h3 class="text-center">Projects</h3>
@@ -45,7 +51,7 @@
                  class="project-name">
                 <h3>Checkd</h3>
               </a>
-              <p>Code First: Girls Hack from Home project.<br />
+              <p>Code First: Girls Hack from Home hackathon <b>finalist</b>.<br />
                   We wanted to create an application that helped people understand whether
                   the news they are reading is fake or not. <br />We provide the user with an
                   indication of likely sentiment and bias of a news article followed
@@ -58,6 +64,7 @@
                   <li>Python</li>
                   <li>Firebase</li>
                   <li>IBM Carbon</li>
+                  <li>Heroku</li>
                 </ul>
               </p>
               <div class="link-section">
@@ -84,11 +91,14 @@
               </a>
               <p>My cat is my absolute world, so it was only right that I made him his own website.
               </p>
+              <p>I used this website to learn more about React.</p>
               <p>Tech and tools:
                 <ul>
                   <li>React</li>
                   <li>HTML</li>
                   <li>CSS</li>
+                  <li>Node / Express</li>
+                  <li>Netlify</li>
                 </ul>
               </p>
               <div class="link-section">
@@ -96,6 +106,18 @@
                   <img src="images/github.svg" title="Github"/>
                 </a>
               </div>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="col-xl-4 col-lg-4 col-md-6 col-sm-6 col-xs-12 card-body">
+        <div class="card-container">
+          <div class="card" onclick="flip(event)">
+            <div class="front">
+              <p>Front</p>
+            </div>
+            <div class="back">
+              <h3>Third project</h3>
             </div>
           </div>
         </div>
@@ -109,8 +131,9 @@
       <p>
         Although my job title is technically 'Java Developer', I regularly work across the stack.<br />
         From requirements capture and design, through to implementation, and testing,
-        I have worked throughout the software lifecycle. I regularly work maintaining legacy code and
-        From starting as a graduate, I've taken on more responsibility...
+        I have worked throughout the software lifecycle.
+        I regularly work maintaining legacy code and providing 3rd line support to users.
+        From starting as a graduate, I've taken on more responsibility including mentoring junior developers.
       </p>
     </div>
     <div class="row greyRow">
@@ -135,10 +158,21 @@
         <div class="col-lg-12 col-md-12">
           <h2 class="text-center">Let's Connect</h2>
           <p class="text-center">
-            <a href="https://www.codehippo.co.uk">Blog</a>
-            <a href="https://twitter.com/AlyCodeHippo">Twitter</a>
-            <a href="https://www.linkedin.com/in/aly-stroud-518884102/">LinkedIn</a>
-            <a href="">Email</a>
+            <a href="https://www.codehippo.co.uk" target="_blank" class="connect-icon">
+              <img src="images/blog.svg" title="Blog - CodeHippo"/>
+            </a>
+            <a href="https://twitter.com/AlyCodeHippo" target="_blank" class="connect-icon">
+              <img src="images/twitter.svg" title="Twitter"/>
+            </a>
+            <a href="https://www.linkedin.com/in/aly-stroud-518884102/" target="_blank" class="connect-icon">
+              <img src="images/linkedin.svg" title="LinkedIn"/>
+            </a>
+            <a href="https://github.com/alystroud" target="_blank" class="connect-icon">
+              <img src="images/github.svg" title="Github"/>
+            </a>
+            <a href="" class="connect-icon">
+              <img src="images/email.svg" title="Email"/>
+            </a>
           </p>
         </div>
     </div>
