--- a/index.html
+++ b/index.html
@@ -63,10 +63,21 @@
           <div class="col-lg-12 col-md-12">
             <h2 class="text-center">Let's Connect</h2>
             <p class="text-center">
-              <a href="https://www.codehippo.co.uk">Blog</a>
-              <a href="https://twitter.com/AlyCodeHippo">Twitter</a>
-              <a href="https://www.linkedin.com/in/aly-stroud-518884102/">LinkedIn</a>
-              <a href="">Email</a>
+              <a href="https://www.codehippo.co.uk" target="_blank" class="connect-icon">
+                <img src="images/blog.svg" title="Blog - CodeHippo"/>
+              </a>
+              <a href="https://twitter.com/AlyCodeHippo" target="_blank" class="connect-icon">
+                <img src="images/twitter.svg" title="Twitter"/>
+              </a>
+              <a href="https://www.linkedin.com/in/aly-stroud-518884102/" target="_blank" class="connect-icon">
+                <img src="images/linkedin.svg" title="LinkedIn"/>
+              </a>
+              <a href="https://github.com/alystroud" target="_blank" class="connect-icon">
+                <img src="images/github.svg" title="Github"/>
+              </a>
+              <a href="" class="connect-icon">
+                <img src="images/email.svg" title="Email"/>
+              </a>
             </p>
           </div>
       </div>
