--- a/instructor.html
+++ b/instructor.html
@@ -26,10 +26,41 @@
         especially those who previously thought coding was 'not for them'.
       </p>
       <p>For the last 2 years, I have been leading front-end development courses with
-        <a href="">Code First:Girls</a>. I'm very proud that I have taught over
-        100 young women to code their very first websites over 8 weeks.
+        <a href="https://www.codefirstgirls.org.uk/">Code First:Girls</a> at the University of Bath.
+        I'm very proud that I have taught over 100 young women and non-binary students
+        to code their very first websites.
     </div>
     <div>Links to Code First Girls blog posts</div>
+    <div>
+      <a href="https://www.codehippo.co.uk/becoming-a-code-first-girls-instructor/">
+        Becoming a Code First:Girls instructor
+      </a>
+    </div>
+    <div>I am always looking out for new opportunities to encourage kids and young
+      women to start coding. If you have any opportunity, please reach out.
+    </div>
+    <div class="row greyRow footer" padding-bottom="50px">
+      <div class="col-lg-12 col-md-12">
+        <h2 class="text-center">Let's Connect</h2>
+        <p class="text-center">
+          <a href="https://www.codehippo.co.uk" target="_blank" class="connect-icon">
+            <img src="images/blog.svg" title="Blog - CodeHippo"/>
+          </a>
+          <a href="https://twitter.com/AlyCodeHippo" target="_blank" class="connect-icon">
+            <img src="images/twitter.svg" title="Twitter"/>
+          </a>
+          <a href="https://www.linkedin.com/in/aly-stroud-518884102/" target="_blank" class="connect-icon">
+            <img src="images/linkedin.svg" title="LinkedIn"/>
+          </a>
+          <a href="https://github.com/alystroud" target="_blank" class="connect-icon">
+            <img src="images/github.svg" title="Github"/>
+          </a>
+          <a href="" class="connect-icon">
+            <img src="images/email.svg" title="Email"/>
+          </a>
+        </p>
+      </div>
+    </div>
   </div>
 </body>
 </html>
