--- a/creator.html
+++ b/creator.html
@@ -23,6 +23,28 @@
       <p>Blog logo here</p>
       <p>CodeHippo is my creative outlet.</p>
     </div>
+    <div class="row greyRow footer" padding-bottom="50px">
+        <div class="col-lg-12 col-md-12">
+          <h2 class="text-center">Let's Connect</h2>
+          <p class="text-center">
+            <a href="https://www.codehippo.co.uk" target="_blank" class="connect-icon">
+              <img src="images/blog.svg" title="Blog - CodeHippo"/>
+            </a>
+            <a href="https://twitter.com/AlyCodeHippo" target="_blank" class="connect-icon">
+              <img src="images/twitter.svg" title="Twitter"/>
+            </a>
+            <a href="https://www.linkedin.com/in/aly-stroud-518884102/" target="_blank" class="connect-icon">
+              <img src="images/linkedin.svg" title="LinkedIn"/>
+            </a>
+            <a href="https://github.com/alystroud" target="_blank" target="_blank" class="connect-icon">
+              <img src="images/github.svg" title="Github"/>
+            </a>
+            <a href="" class="connect-icon">
+              <img src="images/email.svg" title="Email"/>
+            </a>
+          </p>
+        </div>
+    </div>
   </div>
 </body>
 </html>
